--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     --lightblue: #3657CB;
     --gray: gray;
     --lightgreen: #89CB36;
+    --ligtred: #CB3F36;
 }
 
 body {
@@ -21,6 +22,7 @@ body {
 
 /* header start */
 header {
+    /* position: fixed; */
     width: 100%;
     padding: calc(1.87vw + 4px);
     /*40px 10px*/
@@ -31,7 +33,12 @@ header {
     align-items: center;
     gap: calc(8.1vw - 6px);
     /* 150px 20px*/
+    z-index: 1;
 
+}
+
+header.scrolled {
+    background-color: #D9FADD;
 }
 
 header #burgermenu {
@@ -264,3 +271,48 @@ header .search-auth-container #auth:hover {
 }
 
 /* hero end*/
+
+/* trailers start */
+.trailers-container {
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.trailers-container-introduction {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.trailers-container-introduction h2 {
+    font-family: 'Qanelas', sans-serif;
+    font-weight: 900;
+    font-size: calc(2.06vw + 25.4px);
+    /*65px 32px*/
+    line-height: 100%;
+    color: var(--white);
+}
+
+#trailers-page {
+    cursor: pointer;
+    font-family: Qanelas;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 100%;
+    letter-spacing: 0%;
+
+}
+
+.trailers-container-content {
+    display: flex;
+    flex-direction: column;
+
+}
+iframe {
+    margin-top: 79px;
+    border-radius: 10px;
+}
+
+/* trailers end */
